Fixed content vs header div width discrepency on narrow browser windows. Set a comfortable min-width for the #globalWrapper so the header background doesn't get clipped.

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
 /* header */
 #globalWrapper {
 	background: #fff url('images/header-bar-thin.png') repeat-x top left;
+	min-width: 980px;
 }
 
 #headerNav {
